@@ -7,15 +7,20 @@ AC_REQUIRE([AC_PROG_CC])
 AC_REQUIRE([MBOARD_CHECK_PARALLEL])
 
 # vars to be exported at end of macro
+MBOARD_S_CFLAGS=""
+MBOARD_P_CFLAGS="${MPICFLAGS} ${THREADS_CFLAGS}"
+MBOARD_SD_CFLAGS=""
+MBOARD_PD_CFLAGS="${MPICFLAGS} ${THREADS_CFLAGS}"
+
 MBOARD_S_LIBS="-lmboard_s"
-MBOARD_P_LIBS="-lmboard_p"
+MBOARD_P_LIBS="-lmboard_p ${MPILIBS} ${THREADS_LIBS}"
 MBOARD_SD_LIBS="-lmboard_sd"
-MBOARD_PD_LIBS="-lmboard_pd"
+MBOARD_PD_LIBS="-lmboard_pd ${MPILIBS} ${THREADS_LIBS}"
+
 MBOARD_S_LDFLAGS=""
-MBOARD_P_LDFLAGS=""
+MBOARD_P_LDFLAGS="${MPILDFLAGS} ${THREADS_LDFLAGS}"
 MBOARD_SD_LDFLAGS=""
-MBOARD_PD_LDFLAGS=""
-MBOARD_CFLAGS=""
+MBOARD_PD_LDFLAGS="${MPILDFLAGS} ${THREADS_LDFLAGS}"
 
 
 # Allow users to manually specify path to mboard installation
@@ -37,7 +42,11 @@ then
 	CFLAGS="-I${MBOARDDIR}/include"
 	LDFLAGS="-L${MBOARDDIR}/lib"
 	
-	MBOARD_CFLAGS="${CFLAGS} ${MBOARD_CFLAGS}"
+	MBOARD_S_CFLAGS="${CFLAGS} ${MBOARD_S_CFLAGS}"
+	MBOARD_P_CFLAGS="${CFLAGS} ${MBOARD_P_CFLAGS}"
+	MBOARD_SD_CFLAGS="${CFLAGS} ${MBOARD_SD_CFLAGS}"
+	MBOARD_PD_CFLAGS="${CFLAGS} ${MBOARD_PD_CFLAGS}"
+	
 	MBOARD_S_LDFLAGS="${LDFLAGS} ${MBOARD_S_LDFLAGS}"
 	MBOARD_P_LDFLAGS="${LDFLAGS} ${MBOARD_P_LDFLAGS}"
 	MBOARD_SD_LDFLAGS="${LDFLAGS} ${MBOARD_SD_LDFLAGS}"
@@ -60,9 +69,9 @@ AC_TRY_COMPILE([#include <mboard.h>],[],[],
 if test ! "x${want_parallel}" = xno;
 then
 
-CFLAGS="${MPICFLAGS} ${THREADS_CFLAGS} ${CFLAGS}"
-LDFLAGS="${MPILIBS} ${LDFLAGS}"
-LIBS="${MPILIBS} ${THREADS_LIBS} ${LIBS}"
+CFLAGS="${MBOARD_P_CFLAGS}"
+LDFLAGS="${MBOARD_P_LDFLAGS}"
+LIBS="${MBOARD_P_LIBS}"
 
 AC_CHECK_LIB([mboard_p], [MB_SyncTest], [], [AC_MSG_ERROR([
 ** Parallel libmboard (libmboard_p) could not be found. That is required
@@ -83,10 +92,15 @@ AC_SUBST(MBOARD_S_LIBS)
 AC_SUBST(MBOARD_P_LIBS)
 AC_SUBST(MBOARD_SD_LIBS)
 AC_SUBST(MBOARD_PD_LIBS)
+
 AC_SUBST(MBOARD_S_LDFLAGS)
 AC_SUBST(MBOARD_P_LDFLAGS)
 AC_SUBST(MBOARD_SD_LDFLAGS)
 AC_SUBST(MBOARD_PD_LDFLAGS)
-AC_SUBST(MBOARD_CFLAGS)
+
+AC_SUBST(MBOARD_S_CFLAGS)
+AC_SUBST(MBOARD_P_CFLAGS)
+AC_SUBST(MBOARD_SD_CFLAGS)
+AC_SUBST(MBOARD_PD_CFLAGS)
 
 ])dnl
